deployment/rasa-prod/rasa-prod-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rasa-prod
  namespace: dash-ecomm
spec:
  replicas: 1
  selector:
    matchLabels:
      component: rasa-prod
      type: dash-ecomm
  template:
    metadata:
      labels:
        component: rasa-prod
        type: dash-ecomm
    spec:
      containers:
      - image: textclouddev.azurecr.io/neuralspace/dash-ecomm:latest
        imagePullPolicy: Always
        command: [ "/bin/sh","-c" ]
        args:
        - "poetry run python -m dash_ecomm.elastic_search_data_upload upload --es-url http://elasticsearch:9200 --index-name e_comm && poetry run rasa run --cors * --endpoints endpoints-rasa-prod.yml --debug"

        name: dash-ecomm-rasa-prod
        ports:
        - containerPort: 5005
        resources:
          requests:
            cpu: 0.2
            memory: 100Mi
      restartPolicy: Always
